--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -1,1 +1,13 @@
-<app-kpi></app-kpi>
+<div class="kpiDiv"><app-kpi></app-kpi></div>
+
+<div class="deviceDiv">
+    <div class="deviceChartDIV"> <app-devicechart></app-devicechart></div>
+    <div class="serviceChartDiv"><app-servicechart></app-servicechart>  </div>
+    
+</div>
+<div class="salesDiv">
+    <div class="salesChart"><app-saleschart></app-saleschart></div>
+    <div class="customerChart"><app-customerchart></app-customerchart></div>
+</div>
+
+
