customer table routing added

--- a/src/app/main-body/customerchart/customerchart.component.html
+++ b/src/app/main-body/customerchart/customerchart.component.html
@@ -1,4 +1,8 @@
-<p>customerchart works!</p>
+
 <div id="chartDiv">
-    <canvas id="customerChart"></canvas>
+   
+    <canvas id="customerChart" ></canvas>
+    <BUTton (click)='sortByDevice()'>device</BUTton>
+    <button (click)='sortByTest()'>test conducted</button>
+    <a routerLink="customers">more</a>
 </div>
