--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -1,4 +1,4 @@
-<div class="kpiDiv"><app-kpi></app-kpi></div>
+<!-- <div class="kpiDiv"><app-kpi></app-kpi></div>
 
 <div class="deviceDiv">
     <div class="deviceChartDIV"> <app-devicechart></app-devicechart></div>
@@ -8,6 +8,6 @@
 <div class="salesDiv">
     <div class="salesChart"><app-saleschart></app-saleschart></div>
     <div class="customerChart"><app-customerchart></app-customerchart></div>
-</div>
+</div> -->
 
-
+<div class="customerChart"><app-customerchart></app-customerchart></div>
