use localhost 9000 for my db, yearly,weekly,monthly set

--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -11,3 +11,4 @@
 </div> -->
 
 <div class="customerChart"><app-customerchart></app-customerchart></div>
+<div><app-saleschart></app-saleschart></div>
