--- a/src/app/main-body/saleschart/saleschart.component.html
+++ b/src/app/main-body/saleschart/saleschart.component.html
@@ -1,8 +1,8 @@
 <div class="filterDiv">
     <div class="filterButton">
-        <button>week</button>
-        <button>Month</button>
-        <button>Year</button>
+        <button (click)="setWeeklyChart(packA)">week</button>
+        <button (click)="setMonthlyChart(packA)">Month</button>
+        <button (click)="setYearlyChart(packA)">Year</button>
     </div>
 
     <div class="filterTab">
