basic layout of the firest page set.. more styling needs to be done

--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -1,11 +1,18 @@
-<div class="kpiDiv"><app-kpi></app-kpi></div>
-
-<div class="deviceDiv">
-    <div class="deviceChartDIV"> <app-devicechart></app-devicechart></div>
-    <div class="serviceChartDiv"><app-servicechart></app-servicechart>  </div>
+<div class="mainBodyDiv">
     
-</div>
-<div class="sales-terstDiv">
-    <div class="salesChart"><app-saleschart></app-saleschart></div>
-    <div class="customerChart"><app-customerchart></app-customerchart></div>
+    <div class="kpiDiv"><app-kpi></app-kpi></div>
+
+    <div class="chartsDiv">
+        <div class="deviceDiv">
+            <div class="deviceChartDIV"> <app-devicechart></app-devicechart></div>
+            <div class="serviceChartDiv"><app-servicechart></app-servicechart>  </div>
+            
+        </div>
+        <div class="sales-testDiv" style="color: black;">
+            <div class="salesChart"><app-saleschart></app-saleschart></div>
+            <div class="customerChart"><app-customerchart></app-customerchart></div>
+        </div>
+    </div>
+
+
 </div>
