--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -1,10 +1,36 @@
+.mainBodyDiv{
+    width: 100%;
+}
+
 .kpiDiv{
     width: 100%;
     height: 14vh;  
     
   
 }
+
+.chartsDiv{
+    width:100%;
+    display: inline-flex;
+}
+
 .sales-testDiv{
     height: 30%;
-    width: 30%;
+    width: 77%;
+    display: flex;
+}
+
+.deviceDiv{
+    width: 23%;
+    
+}
+
+.salesChart{
+    width: 50%;
+    padding: 4%;
+}
+
+.customerChart{
+    width: 50%;
+    padding: 4%;
 }
