basic layout changed, kpi level

--- a/src/app/main-body/servicechart/servicechart.component.html
+++ b/src/app/main-body/servicechart/servicechart.component.html
@@ -1,4 +1,4 @@
-<p>servicechart works!</p>
+<!-- <p>servicechart works!</p> -->
 <div id="chartDiv">
     <canvas id="serviceChart"></canvas>
 </div>
