--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -24,6 +24,7 @@
 
 .deviceDiv{
     width: 23%;
+    /* padding-top: 4%; */
     
 }
 
@@ -36,5 +37,13 @@
 .customerChart{
     width: 50%;
     padding: 4%;
+
+}
+
+.deviceChartDIV{
+
+}
+
+.serviceChartDiv{
 
 }
