--- a/src/app/main-body/customer-details/customer-details.component.css
+++ b/src/app/main-body/customer-details/customer-details.component.css
@@ -1,36 +1,35 @@
-#chartDiv{
-    width: 100%;
-    height:50vh
-  }
-  *{
+*{
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
 }
 
-/* .container{
-    background-color: rgb(255, 53, 53);
-} */
+.container{
+    background-color: white
+}
 
 .details{
-    margin: 2vh;
     padding: 5vh;
-    border: 1px solid blue;
     display: flex;
+    text-align: justify;
 }
 
 .details-L{
     width: 50%;
+    margin: 2vh;
+    background-color: #cceeff;
+    box-shadow: 10px 10px 5px grey
 }
 .details-R{
     width: 50%;
+    margin: 2vh;
+    background-color: #cceeff;  
+    box-shadow: 10px 10px 5px grey
 }
 .content{
     width: 80%;
     padding: 1vh;
     margin: 1vh;
-    border-bottom: 1px solid blue;
-    border-right: 1px solid blue;
 }
 
 .table-graph{
@@ -44,29 +43,38 @@
     padding-right: 5vh;
     overflow-y: scroll;
     overflow-x: hidden;
-    
-    
 }
 
-table,tr,td,th{
-    border: 2px solid rgb(224, 220, 220);
-    border-collapse: collapse;
-    padding: 3vh;
-    border: none;
+#device {
+    margin-top: 5%;
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 90%;
+      margin-left:5%;
+    }
     
-}
-td {
-
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
-  /* border-collapse: collapse; */
-}​
-
-.graph{
-    width: 100%;
+    #device td, #device th {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: center;
+    }
     
-    background-color: #fff;
+    #device tr:nth-child(even){background-color: #f2f2f2;}
+    
+    #device tr:hover {background-color:  #cceeff}
+    
+    #device th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      
+      background-color:#2ba6f1;
+      color: white;
+    }
+
+.chart{
+    width: 60%;
 }
+
 
 ::-webkit-scrollbar {
     width: 2vh;
@@ -82,4 +90,9 @@ td {
   
 ::-webkit-scrollbar-thumb:hover {
     background: #555; 
+}
+button{
+    background-color: inherit;
+    border:none;
+    
 }
