--- a/src/app/main-body/device-performance/device-performance.component.html
+++ b/src/app/main-body/device-performance/device-performance.component.html
@@ -1,4 +1,6 @@
-<p>device-performance works!</p>
+
 <div>
-    <canvas id="newchart"></canvas>
+    <span>DeviceId:{{deviceId}}</span>
+    <canvas id="testChart"></canvas>
+    <button (click)='close()'> close</button>
 </div>
