--- a/src/app/main-body/customerchart/customerchart.component.html
+++ b/src/app/main-body/customerchart/customerchart.component.html
@@ -1,9 +1,14 @@
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div id="chartDiv" >  
 
-    <BUTton (click)='sortByDevice()'>device</BUTton>
+    <button (click)='sortByDevice()'>device</button>
     <button (click)='sortByTest()'>test conducted</button>
-    <a routerLink="customers">more</a>
+  
+    <a routerLink="customers">
+       <i class="fa fa-bars"></i>
+    </a>
     <canvas id="customerChart" ></canvas>
     
 </div>
