--- a/src/app/main-body/customerchart/customerchart.component.css
+++ b/src/app/main-body/customerchart/customerchart.component.css
@@ -1,6 +1,10 @@
 #chartDiv{
   width: 100%;
-  height:40vh
+  height:30vh;
+  border-color: black;
+  border-width: 1px;
+ border-radius: 20px;
+  background-color:	#F5F5F5;
 }
 
 button{
@@ -18,3 +22,15 @@ button:focus{
   text-decoration: underline;
 
 }
+/* #chartDiv{
+
+ border-color: black;
+ border-width: 1px;
+border-radius: 20px;
+ background-color:	#F5F5F5;
+ margin-left: 5px;
+ margin-top: 5px;
+ padding:5px;
+ padding-top: 5px;
+
+ } */
