--- a/src/app/main-body/saleschart/saleschart.component.html
+++ b/src/app/main-body/saleschart/saleschart.component.html
@@ -1,3 +1,4 @@
+<div id="saleDiv">
 <div class="filterDiv">
     <div class="filterButton">
         <button (click)="setTime(week)">week</button>
@@ -28,4 +29,6 @@
 
 <div id="chartDiv">
     <canvas id="salesChart"></canvas>
+</div>
+
 </div>
