--- a/src/app/main-body/customerchart/customerchart.component.css
+++ b/src/app/main-body/customerchart/customerchart.component.css
@@ -1,20 +1,14 @@
-#chartDiv{
-  width: 100%;
-  height:30vh;
-  border-color: black;
-  border-width: 1px;
- border-radius: 20px;
-  background-color:	#F5F5F5;
-}
+
 
 button{
   border: none;
   background-color:inherit;
   color: #000099;
-  font-size: 100%;
+  font-size: 80%;
   font-weight: bold;
   padding:2px;
-  margin:5px
+  margin:5px;
+  margin-left: 5px;
     
 }
 button:focus{
@@ -22,15 +16,13 @@ button:focus{
   text-decoration: underline;
 
 }
-/* #chartDiv{
+#chartDiv{
+  width: 100%;
+  height:30vh;
+  background: rgba(255, 255, 255, 0.253);
+  padding:2%;
+  padding-bottom: 30px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+  border-radius: 8px;
 
- border-color: black;
- border-width: 1px;
-border-radius: 20px;
- background-color:	#F5F5F5;
- margin-left: 5px;
- margin-top: 5px;
- padding:5px;
- padding-top: 5px;
-
- } */
+ }
