--- a/src/app/main-body/device-details/device-details.component.html
+++ b/src/app/main-body/device-details/device-details.component.html
@@ -1,2 +1,19 @@
 
 <h4>DETAILS OF {{deviceName}} </h4>
+<p>Total device {{totalDevice}}</p>
+<div id="customerTable">
+    <table>
+        <tr>
+            <th>Id</th>
+            <th>Customer Name</th>
+        </tr>
+        <tr *ngFor='let customer of customerList'>
+            <td>{{customer.customerId}}</td>
+            <td>{{customer.customerName}}</td>
+        </tr>
+    </table>
+</div>
+<div id="chartDiv">
+    <canvas  id="deviceChart"></canvas>
+</div> 
+
