prev and next button added

--- a/src/app/main-body/saleschart/saleschart.component.html
+++ b/src/app/main-body/saleschart/saleschart.component.html
@@ -17,14 +17,19 @@
             </select>
         </form>
     </div>
-    <div class="filterTab">
+    <!-- <div class="filterTab">
         <form>
             <select>
                 <option value="alldevice"> All Device</option>
             </select>
         </form>
 
-    </div>
+    </div> -->
+</div>
+
+<div class="filterButton">
+    <button (click)="timeSpanLess()">Prev.</button>
+    <button (click)="timeSpanMore()">Next</button>
 </div>
 
 <div id="chartDiv">
