--- a/src/app/main-body/device-details/device-details.component.css
+++ b/src/app/main-body/device-details/device-details.component.css
@@ -1,4 +1,46 @@
+#container{
+    display: flex;
+    flex-direction: row;
+    justify-content:start;
+  
+
+}
 #chartDiv{
     width: 50%;
-    height: 50%;
 }
+#customerTable{
+    width: 30%;
+}
+table,td,th{
+    
+    padding: 5px;
+    border: black;
+    border-style: solid;
+    border-collapse: collapse;
+    border-width: 1px;
+}
+#customer {
+    margin-top: 5%;
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 90%;
+      margin-left:5%;
+    }
+    
+    #customer td, #customer th {
+      border: 1px solid #ddd;
+      padding: 5px;
+      text-align: center;
+    }
+    
+    #customer tr:nth-child(even){background-color: #f2f2f2;}
+    
+    #customer tr:hover {background-color:  #cceeff}
+    
+    #customer th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      
+      background-color:#2ba6f1;
+      color: white;
+    }
