--- a/src/app/main-body/device-performance/device-performance.component.html
+++ b/src/app/main-body/device-performance/device-performance.component.html
@@ -1,5 +1,5 @@
 
-<div>
+<div class="chart">
     <span>DeviceId:{{deviceId}}</span>
     <canvas id="testChart"></canvas>
     <button (click)='close()'> close</button>
