--- a/src/app/main-body/kpi/kpi.component.html
+++ b/src/app/main-body/kpi/kpi.component.html
@@ -3,30 +3,27 @@
 
     <div class="kpiblock" id="totalSale">
         <div class="kpiheader">Total Sales</div>
-        <span>{{kpiObj.sales.totalsales}}</span>
-    
-       
-    
+       <div class="kpidata">{{kpiObj.sales.totalsales}}</div>
     </div>
+
     <div class="kpiblock" id="saleGrowth">
         <div class="kpiheader">Sale Growth</div>
-        <span>{{kpiObj.salegrowth}}</span>
-
+       <div class="kpidata">{{kpiObj.salegrowth}}</div>
     </div>
+
     <div class="kpiblock" id="customerNumber">
         <div class="kpiheader">Customer</div>
-        <span>{{kpiObj.customer.totalcustomer}}</span>
-
+        <div class="kpidata">{{kpiObj.customer.totalcustomer}}</div>
     </div>
+
     <div class="kpiblock" id="saleTarget">
         <div class="kpiheader">Sale Target</div>
-        <span style="color: green;font-size: xx-large;font-weight: bolder;">{{kpiObj.saletarget}}</span>
-   
-    </div>
+        <div class="kpidata" style="color:rgb(2, 80, 2);font-size:2em;font-weight: bolder;">{{kpiObj.saletarget}}</div>
+   </div>
 
     <div class="kpiblock" id="activeDevice">
         <div class="kpiheader">Device Active</div>
-        <span>{{kpiObj.deviceactive}}</span>
+       <div class="kpidata">{{kpiObj.deviceactive}}</div>
     </div>
 
     
