--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -18,6 +18,6 @@
 
 </div>
 
-<div class="maoComponent">
+<!-- <div class="maoComponent">
     <app-map-component></app-map-component>
-</div>
+</div> -->
