--- a/src/app/main-body/kpi/kpi.component.css
+++ b/src/app/main-body/kpi/kpi.component.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .container{
     display: flex;
     flex-direction: ltr;
@@ -50,15 +53,20 @@
     border-color: #F0F0F0;
     background-color: #F5F5F5;
     width: 12.5%;
-    height: 100%;
+    /* height: 100%; */
+    height: auto;
     margin: 0.3%;
 
     padding: 0.5%;
     padding-bottom: 0px;
     border-radius: 5px;
     box-shadow: 1px 1px 3px #aaaaaa;
+   text-align: center;
+
 }
 .kpidata{
+    display: inline-block;
+    vertical-align: middle;
     text-align: center;
     padding: 3px;
     margin-top: 10px;;
