--- a/src/app/main-body/device-performance/device-performance.component.css
+++ b/src/app/main-body/device-performance/device-performance.component.css
@@ -2,7 +2,9 @@
    width: 100%;
    height: 100%;
 }
-
-@media only screen and (min-width: 768px) {
-
+button{
+    border-color:white;
+    background:initial ;
+    position: relative;
+    float: right;
 }
