--- a/src/app/main-body/device-performance/device-performance.component.html
+++ b/src/app/main-body/device-performance/device-performance.component.html
@@ -1,6 +1,7 @@
 
 <div class="chart">
-    <span>DeviceId:{{deviceId}}</span>
+    <span>DeviceId : {{deviceId}}</span>
+    <button  class="close" (click)='close()'>X</button>
     <canvas id="testChart"></canvas>
-    <button (click)='close()'> close</button>
+   
 </div>
