--- a/src/app/main-body/kpi/kpi.component.css
+++ b/src/app/main-body/kpi/kpi.component.css
@@ -23,7 +23,9 @@
 }
 
 .subscriptionButtonBar{
-    display: inline;
+    display:flex  ;
+    flex-direction: row;
+    justify-content: space-evenly;
     width: 100%;
    
 }
