--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,8 @@
-.headerDiv{
-    width: 100%;
+.headerDiv {
+  width: 100%;
+  height: auto;
 }
 
-.headerImage{
-    max-width: 100%;
+.headerImage {
+  max-width: 100%;
 }
