--- a/src/app/main-body/main-body.component.css
+++ b/src/app/main-body/main-body.component.css
@@ -1,101 +1,101 @@
-/* .mainBodyDiv{
+.mainBodyDiv {
+  width: 100%;
+  height: 64vh !important;
+  display: inline-flex;
+
+  /* overflow-x: hidden; */
+}
+
+.deviceDiv {
+  height: 100% !important;
+  width: 35%;
+}
+
+.deviceChartDIV {
+  min-height: 50% !important;
+}
+
+.serviceChartDiv {
+  min-height: 50% !important;
+}
+
+.kpiDiv {
+  width: 100%;
+  height: 14vh;
+
+  display: flexbox;
+  flex-direction: row;
+  background-color: auto;
+}
+
+.chartsDiv {
+  width: 100%;
+  height: auto;
+  display: inline-block;
+}
+
+.sales-testDiv {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.salesChart {
+  width: 50%;
+  padding: 1%;
+}
+
+.customerChart {
+  width: 50%;
+  padding: 1%;
+}
+/* 
+@media only screen and (max-width: 768px) {
+  .mainBodyDiv {
     width: 100%;
     display: inline-flex;
-    
-}
+  }
 
-.kpiDiv{
+  .kpiDiv {
     width: 100%;
-    height: 14vh;  
-    
-  
-}
+    height: 14vh;
+  }
 
-.chartsDiv{
-    width:100%;
+  .chartsDiv {
+    width: 100%;
     display: inline-block;
-}
+    order: 2;
+  }
 
-.sales-testDiv{
+  .sales-testDiv {
     height: 30%;
     width: 100%;
     display: flex;
+  }
 
-}
+  .deviceDiv {
 
-.deviceDiv{
- 
-width: 35%;
-    
-}
+    margin-top: 10px;
+    width: 35%;
 
-.salesChart{
+    padding-bottom: 0;
+    order: 1;
+  }
+  .deviceChartDIV {
+    height: 50%;
+  }
+  .serviceChartDiv {
+    height: 50%;
+    margin-bottom: 0;
+  }
+
+  .salesChart {
     width: 50%;
     padding: 4%;
+  }
 
-}
-
-.customerChart{
+  .customerChart {
     width: 50%;
     padding: 4%;
-
+  }
 } */
-@media only screen and (min-width: 768px) {
-    .mainBodyDiv{
-        width: 100%;
-        display: inline-flex;
-        
-    }
-    
-    .kpiDiv{
-        width: 100%;
-        height: 14vh;  
-        
-      
-    }
-    
-    .chartsDiv{
-        width:100%;
-        display: inline-block;
-        order: 2;
-    }
-    
-    .sales-testDiv{
-        height: 30%;
-        width: 100%;
-        display: flex;
-    
-    }
-    
-    .deviceDiv{
-        /* width: 23%; */
-        margin-top: 10px;
-        width: 35%;
-    /* padding: 10px; */
-        padding-bottom: 0;
-        order: 1;
-     }
-     .deviceChartDIV{
-         height: 50%;
-     }
-     .serviceChartDiv{
-         height: 50%;
-         margin-bottom: 0;
-     }
-  
-    
-    .salesChart{
-        width: 50%;
-        padding: 4%;
-    
-    }
-    
-    .customerChart{
-        width: 50%;
-        padding: 4%;
-    
-    }
-
-}
-
-
