--- a/src/app/main-body/main-body.component.html
+++ b/src/app/main-body/main-body.component.html
@@ -1,18 +1,20 @@
 <div class="mainBodyDiv">
-    
-    <div class="chartsDiv">
-        <div class="kpiDiv"><app-kpi></app-kpi></div>
-        <div class="sales-testDiv" style="color: black;">
-            <div class="salesChart"><app-saleschart></app-saleschart></div>
-            <div class="customerChart"><app-customerchart></app-customerchart></div>
-        </div>
-    </div>
 
     <div class="deviceDiv">
         <div class="deviceChartDIV"> <app-devicechart></app-devicechart></div>
         <div class="serviceChartDiv"><app-servicechart></app-servicechart>  </div>
         
     </div>
+    
+    <div class="chartsDiv">
+        <div class="kpiDiv"><app-kpi></app-kpi></div>
+        <div class="sales-testDiv">
+            <div class="salesChart"><app-saleschart></app-saleschart></div>
+            <div class="customerChart"><app-customerchart></app-customerchart></div>
+        </div>
+    </div>
+
+    
   
     
 
