--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
 body {
-    margin: 0 auto;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: calc(100vw - (100vw - 100%));
+  overflow-x: hidden;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
