--- a/src/app/main-body/saleschart/saleschart.component.css
+++ b/src/app/main-body/saleschart/saleschart.component.css
@@ -4,8 +4,8 @@
 }
 #saleDiv {
   width: 97% !important;
-  min-height: 35vh;
-  max-height: 40vh;
+
+  height: 19vmax;
   background: rgba(255, 255, 255, 0.253);
   padding: 2%;
   padding-bottom: 30px;
