--- a/src/app/main-body/customerchart/customerchart.component.css
+++ b/src/app/main-body/customerchart/customerchart.component.css
@@ -15,8 +15,7 @@ button:focus {
 
 #chartDiv {
   width: 97% !important;
-  min-height: 35vh;
-  max-height: 40vh;
+  height: 19vmax;
   background: rgba(255, 255, 255);
   padding: 2%;
   padding-bottom: 30px;
