--- a/src/app/main-body/servicechart/servicechart.component.css
+++ b/src/app/main-body/servicechart/servicechart.component.css
@@ -1,14 +1,14 @@
 #chartDiv {
-  height: 50% !important;
-
+  height: 13vmax;
+  width: 100%;
   padding-top: 2%;
   padding-left: 1%;
 }
 
 #serviceChart {
-  height: 100% !important;
+  height: 100%;
   /* min-height: 90% !important; */
-  background: rgba(255, 255, 255, 0.253);
+  background: rgba(255, 255, 255, 0.363);
 
   box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em,
     rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em,
