--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,8 @@ body {
   height: 100%;
   width: calc(100vw - (100vw - 100%));
   overflow-x: hidden;
+  resize: horizontal;
+  background-color: rgba(235, 236, 243, 0.137);
 }
 body {
   margin: 0;
