--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,5 +4,9 @@
 }
 
 .router {
-  width: 100%;
+  width: auto;
+  display: flex;
+  flex-direction: column;
+  /* padding-left: 7%;
+  padding-right: 7%; */
 }
