--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
         <app-header></app-header>  
         <div class="router">
                 <router-outlet></router-outlet>
+                <app-map-component style="align-items: center;"></app-map-component>
         </div>
         <app-footer></app-footer>
 
